[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-007-furnacepulse"
version = "1.0.0"
description = "GL-007 FURNACEPULSE - Furnace Performance Monitoring Agent"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "GreenLang Technologies", email = "engineering@greenlang.io"}
]
maintainers = [
    {name = "GreenLang AI Team", email = "ai-agents@greenlang.io"}
]
keywords = [
    "furnace-monitoring",
    "tube-metal-temperature",
    "hotspot-detection",
    "thermal-efficiency",
    "rul-prediction",
    "nfpa-86",
    "greenlang",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",

    # Numerical/Scientific
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",

    # ML/Explainability
    "scikit-learn>=1.2.0",
    "shap>=0.42.0",
    "lime>=0.2.0",

    # Time Series / RUL Prediction
    "prophet>=1.1.0",
    "lifelines>=0.27.0",

    # Image Processing (IR Camera Feeds)
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",

    # Streaming
    "aiokafka>=0.8.0",
    "kafka-python>=2.0.0",

    # OPC-UA
    "asyncua>=1.0.0",

    # Metrics & Monitoring
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",

    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",

    # Redis
    "redis>=4.5.0",
    "aioredis>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.80.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
    "ipython>=8.0.0",
]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]
graphql = [
    "strawberry-graphql>=0.200.0",
    "ariadne>=0.20.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.1.0",
]
all = [
    "gl-007-furnacepulse[dev,ml,graphql,docs]",
]

[project.urls]
Homepage = "https://greenlang.io"
Documentation = "https://docs.greenlang.io/agents/gl-007"
Repository = "https://github.com/greenlang/gl-agents"
Changelog = "https://github.com/greenlang/gl-agents/blob/main/GL-007_FURNACEPULSE/CHANGELOG.md"
Issues = "https://github.com/greenlang/gl-agents/issues"

[project.scripts]
gl-furnacepulse = "api.rest_api:main"
gl-furnacepulse-worker = "core.worker:main"

[project.entry-points."greenlang.agents"]
furnacepulse = "core.orchestrator:FurnacePulseOrchestrator"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "calculators*",
    "safety*",
    "integration*",
    "alerts*",
    "explainability*",
    "api*",
]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.json"]

# ========================================
# pytest Configuration
# ========================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "safety: marks tests related to safety constraints",
    "opcua: marks tests requiring OPC-UA connection",
    "kafka: marks tests requiring Kafka connection",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ========================================
# Black Configuration
# ========================================
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# ========================================
# Ruff Configuration
# ========================================
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.isort]
known-first-party = [
    "core",
    "calculators",
    "safety",
    "integration",
    "alerts",
    "explainability",
    "api",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert allowed in tests

# ========================================
# MyPy Configuration
# ========================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "shap.*",
    "lime.*",
    "prophet.*",
    "lifelines.*",
    "cv2.*",
    "asyncua.*",
    "strawberry.*",
    "aiokafka.*",
    "plotly.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

# ========================================
# Coverage Configuration
# ========================================
[tool.coverage.run]
source = [
    "core",
    "calculators",
    "safety",
    "integration",
    "alerts",
    "explainability",
    "api",
]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# ========================================
# Bandit Security Configuration
# ========================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip assert and shell injection checks

# ========================================
# Pydantic MyPy Plugin Configuration
# ========================================
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
