[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-012-steamqual"
version = "1.0.0"
description = "Steam Quality Controller - Real-time steam quality monitoring and carryover risk assessment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "GreenLang AI Agent Workforce", email = "agents@greenlang.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "steam",
    "quality",
    "dryness-fraction",
    "carryover",
    "thermodynamics",
    "process-control",
    "industrial",
    "iapws-if97",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "iapws>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
]
ml = [
    "scikit-learn>=1.3",
    "shap>=0.42",
    "filterpy>=1.4",
]
monitoring = [
    "prometheus-client>=0.17",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
all = [
    "gl-012-steamqual[dev,api,ml,monitoring]",
]

[project.urls]
"Homepage" = "https://github.com/greenlang/gl-agents"
"Documentation" = "https://docs.greenlang.ai/agents/gl-012"
"Bug Tracker" = "https://github.com/greenlang/gl-agents/issues"

[project.scripts]
gl-012-steamqual = "api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "golden: Golden master tests for determinism",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "docs/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["core", "calculators", "models", "thermodynamics"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "iapws.*",
    "scipy.*",
    "numpy.*",
    "sklearn.*",
    "shap.*",
    "filterpy.*",
]
ignore_missing_imports = true
