[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenlang-agent-foundation"
version = "1.0.0"
description = "GreenLang Agent Foundation - Production-grade multi-agent orchestration platform for ESG, sustainability, and regulatory compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "GreenLang Team", email = "team@greenlang.io"}
]
maintainers = [
    {name = "GreenLang DevOps", email = "devops@greenlang.io"}
]
keywords = [
    "agents",
    "ai",
    "multi-agent",
    "orchestration",
    "esg",
    "sustainability",
    "compliance",
    "regulatory",
    "csrd",
    "carbon-accounting"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core AI/ML Libraries
    "anthropic~=0.18.1",
    "openai~=1.12.0",
    "tiktoken~=0.6.0",
    "langchain~=0.1.9",
    "langchain-core~=0.1.27",
    "langchain-community~=0.4.1",
    "sentence-transformers~=2.3.1",
    "transformers~=4.37.2",
    "torch~=2.1.2",

    # Data Validation & Serialization
    "pydantic~=2.5.3",
    "pydantic-settings~=2.1.0",
    "marshmallow~=3.20.2",

    # Database & Storage
    "asyncpg~=0.29.0",
    "psycopg2-binary~=2.9.9",
    "sqlalchemy~=2.0.25",
    "alembic~=1.13.1",
    "redis~=5.0.1",
    "hiredis~=2.3.2",
    "boto3~=1.34.34",
    "botocore~=1.34.34",

    # Vector Databases & RAG
    "chromadb~=0.4.22",
    "pinecone-client~=3.0.2",
    "weaviate-client~=4.19.2",
    "faiss-cpu~=1.7.4",
    "qdrant-client~=1.7.3",

    # Web Framework & APIs
    "fastapi~=0.109.2",
    "uvicorn~=0.27.1",
    "watchfiles~=0.21.0",
    "websockets~=12.0",
    "httptools~=0.6.1",
    "starlette~=0.36.3",
    "httpx~=0.26.0",
    "aiohttp~=3.13.3",
    "requests~=2.31.0",

    # Template & Document Processing
    "jinja2~=3.1.3",
    "pypdf~=6.6.2",
    "python-docx~=1.1.0",
    "openpyxl~=3.1.2",
    "pandas~=2.1.4",
    "numpy~=1.26.3",

    # Monitoring & Observability
    "prometheus-client~=0.19.0",
    "opentelemetry-api~=1.22.0",
    "opentelemetry-sdk~=1.22.0",
    "opentelemetry-instrumentation-fastapi~=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy~=0.43b0",
    "opentelemetry-exporter-prometheus~=0.43b0",
    "sentry-sdk~=1.40.2",

    # Task Queue & Background Jobs
    "celery~=5.3.6",
    "kombu~=5.3.5",

    # Security & Authentication
    "python-jose~=3.3.0",
    "passlib~=1.7.4",
    "bcrypt~=4.1.2",
    "python-multipart~=0.0.6",
    "cryptography~=46.0.3",

    # Utilities
    "python-dotenv~=1.0.1",
    "tenacity~=8.2.3",
    "backoff~=2.2.1",
    "cachetools~=5.3.2",
    "structlog~=24.1.0",
    "python-json-logger~=2.0.7",
    "click~=8.1.7",
    "typer~=0.9.0",
    "rich~=13.7.0",

    # Graph & Workflow
    "networkx~=3.2.1",
    "dask~=2024.1.1",

    # Date & Time
    "python-dateutil~=2.8.2",
    "pytz~=2024.1",

    # Configuration & Environment
    "pyyaml~=6.0.1",
    "toml~=0.10.2",

    # Rate Limiting & Circuit Breaker
    "slowapi~=0.1.9",
    "pybreaker~=1.0.2",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest~=7.4.4",
    "pytest-asyncio~=0.23.4",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "pytest-timeout~=2.2.0",
    "pytest-xdist~=3.5.0",
    "black~=24.1.1",
    "isort~=5.13.2",
    "flake8~=7.0.0",
    "mypy~=1.8.0",
    "pylint~=3.0.3",
    "bandit~=1.7.7",
    "safety~=3.0.1",
    "pre-commit~=3.6.0",
    "ipython~=8.21.0",
    "ipdb~=0.13.13",
]

# Testing dependencies
test = [
    "pytest~=7.4.4",
    "pytest-asyncio~=0.23.4",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "pytest-timeout~=2.2.0",
    "pytest-xdist~=3.5.0",
    "pytest-benchmark~=5.2.3",
    "faker~=22.6.0",
    "factory-boy~=3.3.0",
    "hypothesis~=6.98.0",
    "responses~=0.24.1",
    "testcontainers~=3.7.1",
]

# Documentation dependencies
docs = [
    "mkdocs~=1.5.3",
    "mkdocs-material~=9.5.7",
    "mkdocstrings[python]~=0.24.0",
    "mkdocs-mermaid2-plugin~=1.1.1",
    "mike~=2.0.0",
]

# Performance optimization
performance = [
    "uvloop~=0.19.0",
    "orjson~=3.9.13",
    "msgpack~=1.0.7",
    "cython~=3.0.8",
]

# All optional dependencies
all = [
    "greenlang-agent-foundation[dev,test,docs,performance]",
]

[project.urls]
Homepage = "https://greenlang.io"
Documentation = "https://docs.greenlang.io"
Repository = "https://github.com/greenlang/agent-foundation"
Issues = "https://github.com/greenlang/agent-foundation/issues"
Changelog = "https://github.com/greenlang/agent-foundation/blob/main/CHANGELOG.md"

[project.scripts]
greenlang = "cli.main:app"
greenlang-agent = "cli.agent:main"
greenlang-server = "cli.server:main"

[tool.setuptools]
packages = ["agents", "capabilities", "factory", "memory", "observability", "orchestration", "rag"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.toml"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "chromadb.*",
    "pinecone.*",
    "weaviate.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "smoke: Smoke tests",
    "security: Security tests",
    "performance: Performance tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
    "*/setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
    "too-few-public-methods",
    "missing-module-docstring",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 60
min-public-methods = 1
